<!--
  Copyright 2017 Anton Shkurenko

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
  <string name="app_name">GeofencesTest</string>
  <string name="main_activity_geofence_status_text">Inside: %b</string>
  <string name="main_activity_status_default">Status: unknown</string>
  <string name="main_activity_radius_text_hint">Radius</string>
  <string name="main_activity_wifi_text_hint">WiFi Network</string>
  <string name="main_activity_your_location_text">Your location: %s</string>
  <string name="main_activity_your_location_default">Your location: unknown</string>
  <string name="main_activity_your_wifi_text">Your wifi: %s</string>
  <string name="main_activity_your_wifi_default">Your wifi: unknown</string>
  <string name="main_activity_selected_location_text">Selected location: %s (tap to change)</string>
  <string name="main_activity_selected_location_default">Selected location: unknown (tap to change)</string>
  <string name="main_activity_distance_between_text">Distance between: %f</string>
  <string name="main_activity_distance_between_default">Distance between: unknown</string>
</resources>
