<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Anton Shkurenko

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.tonyshkurenko.geofencestest.view.MainActivity"
    >

  <TextView
      android:id="@+id/status_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/main_activity_status_default"
      android:textSize="18sp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/your_location_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/main_activity_your_location_default"
      android:textSize="18sp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/status_text_view"
      />

  <TextView
      android:id="@+id/your_wifi_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/main_activity_your_wifi_default"
      android:textSize="18sp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/your_location_text_view"
      />

  <TextView
      android:id="@+id/selected_location_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/main_activity_selected_location_default"
      android:textSize="18sp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/your_wifi_text_view"
      />

  <TextView
      android:id="@+id/distance_between_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/main_activity_distance_between_default"
      android:textSize="18sp"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/selected_location_text_view"
      />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/radius_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/distance_between_text_view"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/radius_input_layout_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_radius_text_hint"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_location_text_view"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radius_input_layout"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/wifi_network_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_wifi_text_hint"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_location_text_view"
        />

  </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
